# omniscient

./: .env.example  .gitignore  docker-compose.yml
.github/workflows/: contracts.yml
backend/: Cargo.toml  Dockerfile  atlas.hcl  schema.sql
backend/gateway/: Cargo.toml
backend/gateway/src/: api.rs  domain.rs  engine.rs  infra.rs  main.rs  service.rs
backend/indexer/: Cargo.toml
backend/indexer/src/: abi.rs  cursor.rs  events.rs  finalization.rs  lib.rs  main.rs  pipeline.rs  reorg.rs
backend/indexer/src/handlers/: custody.rs  oracle.rs  settlement.rs
backend/resolution/: Cargo.toml
backend/resolution/src/: main.rs
backend/settlement/: Cargo.toml
backend/settlement/src/: main.rs
backend/shared/: Cargo.toml
backend/shared/src/: config.rs  constants.rs  db.rs  domain.rs  error.rs  kafka.rs  lib.rs  tracing_setup.rs
contracts/: foundry.toml  review_notes.md  slither.config.json
contracts/src/: Custody.sol  Oracle.sol  SettlementExchange.sol
contracts/src/interfaces/: IConditionalTokens.sol  ICustody.sol  IPyth.sol
contracts/test/: CTFIntegration.t.sol  Custody.t.sol  CustodyInvariant.t.sol  Exploit.t.sol  Oracle.t.sol  SettlementExchange.t.sol
contracts/test/mocks/: MockUSDC.sol
docs/: architecture.md  components.md  contracts.md  fund-safety.md  gateway.md  how-it-works.md  indexer.md  resolution.md  schema.md  settlement.md  what-is-omniscient.md
