[workspace]
members = ["shared", "gateway", "settlement", "resolution", "indexer"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
    "bigdecimal",
    "migrate",
] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
alloy = { version = "0.5", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
bigdecimal = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
crossbeam = "0.8"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
