[package]
name = "settlement"
version.workspace = true
edition.workspace = true

[[bin]]
name = "settlement"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
rdkafka = { workspace = true }
alloy = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
hex = "0.4"
