[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
rdkafka = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bigdecimal = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
alloy = { workspace = true }
hex = "0.4"
